--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -31,10 +31,13 @@
     <dialog
         android:id="@+id/informDialog"
         android:name="com.example.navigationtestapp.InformDialog"
-        android:label="InformDialog" >
+        android:label="InformDialog">
         <argument
             android:name="testStringValueNavArgs"
-            app:argType="string"
-            android:defaultValue="Very informational text!" />
+            android:defaultValue="Very informational text!"
+            app:argType="string" />
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="myapp://navtestdialog.com/dialoginfo" />
     </dialog>
 </navigation>
